css/boardstyles.css
body{
    background-color: #000;
    font-family: "Lucida Console";
    color: #6b6b6b;
}

a{
    color: #6b6b6b;
}

a:visited{
    color: #6b6b6b;
}

a:hover{
    color: #fff;
}

.container{
    display: flex;
    justify-content: center;
}

.card{
    border-radius: 10px;
    background: #000;
    border: 5px solid #6b6b6b;
    color: #fff;
    width: 300px;
    height: auto;
    margin: 0px auto;
}

.card img{
    border: 5px solid #555; 
    height: 150px;
    width: 150px;
    margin-top: 10px;
}

.threadimage-container{
    text-align: center;
    width: 300px;
    height: 175px;
}

.content{
    text-align: center;
    width: 300px;
    height: auto;
    word-wrap: break-word;
}

.header-bar{
    border: 1px solid #fff;
    border-top: none;
    border-left: none;
    border-right: none;
}

.banner{
    margin-top: 50px;
    margin-bottom: 50px;
    text-align: center;
    
}

